--- a/style.css
+++ b/style.css
@@ -1,31 +1,34 @@
-*{
-    margin:10;
+* {
+    margin: 10;
     padding: 10;
     box-sizing: border-box;
 }
-h1,p{
+
+h1,
+p {
     text-align: center;
     font-size: 90px;
     font-weight: bolder;
 }
 
-nav ul{
+nav ul {
     list-style: none;
     display: flex;
     justify-content: space-around;
-    float:inline-end;
+    float: inline-end;
     color: black;
     font-size: 20px;
     font-weight: bold;
 }
 
-.bttn_wrapper{
+.bttn_wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
 
 }
-.center_bttn{
+
+.center_bttn {
     padding: 40px 50px;
     font-size: large;
     font-weight: 900;
@@ -34,53 +37,198 @@ nav ul{
 
 
 }
-.center_bttn:hover{
-    color:rgb(0, 0, 0);
+
+.center_bttn:hover {
+    color: rgb(0, 0, 0);
     background-color: orange;
-    border-style: inherit;
+    border-style: calc();
 }
-.cert{
-    color:darkorchid;
+
+.cert {
+    color: darkorchid;
 }
-.button{
+
+.button {
     width: 115px;
     padding: 10px;
     font-weight: bold;
     font-size: 19px;
     border: none;
-    background-color:rgb(255, 255, 255);
+    background-color: rgb(255, 255, 255);
     border-radius: 5px;
 
 }
-#login:hover{
+
+#login:hover {
     color: rgb(0, 34, 255);
     text-decoration: underline;
 
 }
-#contact:hover{
+
+#contact:hover {
     color: rgb(0, 47, 255);
-     text-decoration: underline;
+    text-decoration: underline;
 }
-#about:hover{
+
+#about:hover {
     color: rgb(0, 42, 255);
     text-decoration: underline;
 }
-#temp:hover{
+
+#temp:hover {
     color: rgb(0, 47, 255);
     text-decoration: underline;
 }
-#home:hover{
+
+#home:hover {
     color: rgb(0, 8, 255);
     text-decoration: underline;
 }
-.name,.type,.req,.event,.templates{
-    font-size: 20px;
+
+.name,
+.type,
+.req,
+.event,
+.templates,
+.title,
+.name1,
+.date,
+.sign {
+    font-size: 30px;
     text-align: left;
 
 }
-.container{
-    background-color: rgb(255, 255, 255);
-    padding:5px 20px 15px 20px;
-    border: 1px solid rgb(0, 0, 0);
+
+.container {
+    background-color: rgb(244, 240, 240);
+    padding: 20px 20px 30px 30px;
+    margin: 100px;
+    border: 3px solid rgb(0, 0, 0);
     border-radius: 5px;
 }
+
+.heading {
+    text-align: center;
+    font-size: 60px;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.req {
+    text-align: center;
+
+}
+
+input[type="text"],
+input[type="date"],
+#card,
+#opt {
+    width: 100%;
+    padding: 15px;
+    border: 1px solid white;
+    border-radius: 5px;
+    margin: 10px;
+    border-color: rgb(189, 182, 182);
+}
+
+.true {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.submit {
+    padding: 10px 10px;
+    font-size: 30px;
+    font-weight: 900;
+    border-radius: 8px;
+    background-image: linear-gradient(to right, #fc5c7d, #6a82fb);
+
+
+}
+
+.submit:hover {
+    color: rgb(241, 237, 237);
+    background-image: linear-gradient(to right, #434343 0%, black 100%);
+    border-style: calc();
+
+}
+
+h3 {
+    text-align: center;
+    font-size: 20px;
+
+}
+
+.img1,
+.img2,
+.img3 {
+    width: 23%;
+    padding: 30px;
+}
+
+.img4 {
+    width: 6%;
+    padding-right: 8px;
+    image-orientation: calc();
+}
+
+.back {
+    background-color: rgb(108, 214, 188);
+}
+
+.img5 {
+    background-image: url(https://static.vecteezy.com/system/resources/previews/007/410/558/original/minimalist-pastel-color-blob-aesthetic-background-wallpaper-template-poster-free-vector.jpg);
+}
+
+.site-footer {
+    background-color: #838383bc;
+      text-align: center;
+      margin: 10px 0;
+      padding: 10px 0;
+  }
+  
+  #social-wrapper {
+      text-align: center;
+  }
+  
+  
+  .social-wrapper {
+      text-align: center;
+  }
+  
+  .social-wrapper ul li {
+      display: inline;
+      margin: 0 5px;
+  }
+  
+  .twitter-icon,
+  .facebook-icon,
+  .instagram-icon,
+  .linkedin-icon,
+  .googleplus-icon,
+  .youtube-icon,
+  .foursquare-icon{
+      margin-top: .625em;
+      width: 40px;
+      height: 40px;
+      opacity: .6;
+      filter: alpha(opacity=60); 
+    border-radius: 25px;
+  }
+  
+  .twitter-icon:hover,
+  .facebook-icon:hover,
+  .instagram-icon:hover,
+  .linkedin-icon:hover,
+  .googleplus-icon:hover,
+  .youtube-icon:hover,
+  .foursquare-icon:hover {
+      opacity: 1.0;
+      filter: alpha(opacity=100); 
+  }
+  
+  .footer-nav p {
+      text-align: center;
+      font-size: 40px;
+  }
