--- a/style.css
+++ b/style.css
@@ -33,14 +33,14 @@ nav ul {
     font-size: large;
     font-weight: 900;
     border-radius: 8px;
-    background-color: rgb(242, 234, 6);
+    background-color: rgb(175, 114, 221);
 
 
 }
 
 .center_bttn:hover {
-    color: rgb(0, 0, 0);
-    background-color: orange;
+    color: rgb(255, 255, 255);
+    background-color: rgb(126, 16, 209);
     border-style: calc();
 }
 
@@ -100,7 +100,7 @@ nav ul {
 }
 
 .container {
-    background-color: rgb(244, 240, 240);
+    background-color: rgba(203, 179, 230, 0.577);
     padding: 20px 20px 30px 30px;
     margin: 100px;
     border: 3px solid rgb(0, 0, 0);
